--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,15 @@ environment:
   sdk: '>=2.16.2 <3.0.0'
 
 
-dependencies: 
+dependencies:
+  archive: ^3.3.7
   crypto: ^3.0.2
+  http: ^1.1.0
+  json_annotation: ^4.8.1
+  mysql_client: ^0.0.27
   path: ^1.8.1
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   lints: ^1.0.0
