--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: checksum
+name: angersmap_data
 description: A simple command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.16.2 <3.0.0'
+  sdk: '>=2.16.2 <4.0.0'
 
 
 dependencies:
