--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,14 @@ environment:
 
 
 dependencies:
-  archive: ^3.3.7
-  crypto: ^3.0.2
-  http: ^1.1.0
-  json_annotation: ^4.8.1
+  archive: ^3.6.1
+  crypto: ^3.0.5
+  http: ^1.2.2
+  json_annotation: ^4.9.0
   mysql_client: ^0.0.27
-  path: ^1.8.1
+  path: ^1.9.0
 
 dev_dependencies:
-  build_runner: ^2.4.6
-  json_serializable: ^6.7.1
-  lints: ^1.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
+  flutter_lints: ^5.0.0
