--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,18 +4,20 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.16.2 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 
 dependencies:
-  archive: ^3.6.1
-  crypto: ^3.0.5
-  http: ^1.2.2
+  archive: ^4.0.3
+  crypto: ^3.0.6
+  http: ^1.3.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   mysql_client: ^0.0.27
-  path: ^1.9.0
+  mysql_utils: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
-  build_runner: ^2.4.13
-  json_serializable: ^6.8.0
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.4
   flutter_lints: ^5.0.0
