--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,19 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '^3.8.0'
 
 
 dependencies:
-  archive: ^4.0.3
+  archive: ^4.0.7
   crypto: ^3.0.6
-  http: ^1.3.0
+  http: ^1.5.0
   intl: ^0.20.2
   json_annotation: ^4.9.0
-  mysql_client: ^0.0.27
-  mysql_utils: ^2.1.5
   path: ^1.9.1
+  supabase: ^2.9.1
 
 dev_dependencies:
-  build_runner: ^2.4.15
-  json_serializable: ^6.9.4
-  flutter_lints: ^5.0.0
+  build_runner: ^2.8.0
+  json_serializable: ^6.11.1
+  flutter_lints: ^6.0.0
