--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   mysql_client: ^0.0.27
   mysql_utils: ^2.1.5
   path: ^1.9.1
+  postgres: ^3.5.9
 
 dev_dependencies:
   build_runner: ^2.4.15
